# dnn

./: .envrc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  env.yaml  pyproject.toml  requirements.txt
.colab_ssh/: authorized_keys
.github/workflows/: run_test.yaml
config/: InceptionV3-FE-MRI.yaml  InceptionV3-FE-OCT.yaml  InceptionV3-FE-XRay.yaml  InceptionV3-FE-XRay.yml  ViT-chest_xray.yaml  ViT-oct.yaml  ViTb-FE-MRI.yaml  ViTb-FE-OCT.yaml  ViTb-FE-XRay.yaml  chest_xray.yaml  config.yaml  dermnet.yaml  main.yaml  oct.yaml
data/: dataset_summary.csv  performance_log.tsv
data/results/: chest_xray-preprocess-0531_231347.txt  chest_xray-preprocess-0602_133449.txt  oct-preprocess-0531_184536.txt  oct-preprocess-0531_233112.txt
kermany-code/: README.md  occlusion.py  retrain.py
kermany/net/: train.py  utils.py
logs/InceptionV3-FE-MRI-0605-203648/: events.out.tfevents.1685997408.c1e3dc29b5ca.6165.0
mednet/: utils.py
models/: InceptionV3-FE-MRI-0605-203648.pth  InceptionV3-FE-OCT-0605-041511.pth  InceptionV3-FE-XRay-0605-033906.pth  ViTb-FE-MRI-0605-204217.pth  ViTb-FE-OCT-0605-050850.pth  ViTb-FE-XRay-0605-022846.pth  ViTb-FE-XRay-0605-034614.pth  chest_xray-preprocess-0531_231347.pth  chest_xray-preprocess-0602_133449.pth  oct-preprocess-0531_184536.pth  oct-preprocess-0531_233112.pth
net/: __init__.py  data.py  train.py  utils.py
notebooks/: Untitled-1.ipynb  VSCode-Server.ipynb  proto.ipynb
notebooks/ViT/: chest_xray-preprocess.ipynb  module.py  (+2 more)
scripts/: data_summary.py  download_data.sh  prepare_data.py  preprocess.py  train_eval.py
(+16 files in other folders)
